syntax = "proto3";

package auth;

option go_package = "./proto/auth";

service AuthService {
  rpc Register(AuthRequest) returns (AuthResponse);
  rpc Login(AuthRequest) returns (AuthResponse);
  rpc Logout(LogoutRequest) returns (Empty);
  rpc ChangePassword(ChangePasswordRequest) returns (Empty);
}

message Empty {}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message LogoutRequest {
  string email = 1;
}

message ChangePasswordRequest {
  string token = 1;
  string email = 2;
  string password = 3;
}


/*
protoc --go_out=. --go_opt=paths=source_relative   --go-grpc_out=. --go-grpc_opt=paths=source_relative   pkg/proto/auth/auth.proto
*/
